fixed spacing of home facebook button

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -33,6 +33,7 @@
     .facebook-outer{
       text-align: center;
       width: 100%;
+      margin-top:30px;
     }
   }
 }
